parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID np_addFunc SEMICOLON programT
Rule 2     programT -> class programT
Rule 3     programT -> vars programF
Rule 4     programT -> programF
Rule 5     programF -> func programF
Rule 6     programF -> main empty
Rule 7     class -> CLASS ID classT
Rule 8     classT -> LESS INHERIT ID GREATER classF
Rule 9     classT -> classF
Rule 10    classF -> SEMICOLON L_CURPAR ATTRIBUTES dec METHODS func R_CURPAR SEMICOLON empty
Rule 11    vars -> VARS dec empty
Rule 12    dec -> VAR arr np_getDecArr decF
Rule 13    dec -> VAR np_getDec decF
Rule 14    decF -> COMMA dec
Rule 15    decF -> COLON type np_getVarType SEMICOLON np_getDec dec
Rule 16    decF -> COLON type np_getVarType SEMICOLON np_getDec np_addToDic empty
Rule 17    type -> INT empty
Rule 18    type -> FLOAT empty
Rule 19    type -> CHAR empty
Rule 20    type -> BOOL empty
Rule 21    type -> ID empty
Rule 22    arr -> L_BREAK CTE_INT COMMA CTE_INT R_BREAK empty
Rule 23    arr -> L_BREAK CTE_INT R_BREAK empty
Rule 24    func -> typeFunc FUNCTION ID np_addFunc L_PAR funcF
Rule 25    funcF -> parameter R_PAR SEMICOLON dec L_CURPAR statement R_CURPAR empty
Rule 26    funcF -> R_PAR SEMICOLON dec L_CURPAR statement R_CURPAR empty
Rule 27    typeFunc -> INT empty
Rule 28    typeFunc -> FLOAT empty
Rule 29    typeFunc -> CHAR empty
Rule 30    typeFunc -> BOOL empty
Rule 31    typeFunc -> ID empty
Rule 32    typeFunc -> VOID empty
Rule 33    parameter -> VAR COLON typepar SEMICOLON parameterF
Rule 34    parameterF -> parameter
Rule 35    parameterF -> empty
Rule 36    typepar -> INT empty
Rule 37    typepar -> FLOAT empty
Rule 38    typepar -> CHAR empty
Rule 39    typepar -> BOOL empty
Rule 40    typepar -> ID empty
Rule 41    main -> MAIN np_getMainFunc L_PAR R_PAR L_CURPAR statement R_CURPAR empty
Rule 42    statement -> assigment statementF
Rule 43    statement -> void statementF
Rule 44    statement -> return statementF
Rule 45    statement -> read statementF
Rule 46    statement -> write statementF
Rule 47    statement -> if statementF
Rule 48    statement -> repeat statementF
Rule 49    statementF -> statement
Rule 50    statementF -> empty
Rule 51    void -> ID DOT ID L_PAR param R_PAR SEMICOLON empty
Rule 52    void -> ID L_PAR param R_PAR SEMICOLON empty
Rule 53    void -> ID L_PAR R_PAR SEMICOLON empty
Rule 54    arrfunc -> L_BREAK exp COMMA exp R_BREAK empty
Rule 55    arrfunc -> L_BREAK exp R_BREAK empty
Rule 56    param -> exp paramF
Rule 57    paramF -> COMMA param
Rule 58    paramF -> empty
Rule 59    return -> RETURN L_PAR exp np_addReturn R_PAR SEMICOLON empty
Rule 60    var -> VAR varF
Rule 61    var -> ID DOT VAR varF
Rule 62    varF -> arrfunc empty
Rule 63    varF -> empty
Rule 64    read -> READ L_PAR readF
Rule 65    readF -> var np_addRead COMMA readF
Rule 66    readF -> var np_addRead R_PAR SEMICOLON empty
Rule 67    write -> WRITE L_PAR writeT
Rule 68    writeT -> CTE_STRING np_addConstString writeF
Rule 69    writeT -> exp writeF
Rule 70    writeF -> COMMA np_addWrite writeT
Rule 71    writeF -> R_PAR np_addWrite SEMICOLON empty
Rule 72    repeat -> conditional empty
Rule 73    repeat -> nonconditional empty
Rule 74    if -> IF L_PAR exp np_checkBool R_PAR THEN L_CURPAR statement SEMICOLON R_CURPAR ifF
Rule 75    ifF -> ELSE np_else L_CURPAR statement SEMICOLON R_CURPAR np_endIf empty
Rule 76    ifF -> np_endIf empty
Rule 77    assigment -> var np_addId assigmentF
Rule 78    assigmentF -> EQUAL np_addOp exp np_doAssign empty
Rule 79    assigmentF -> ope np_addOp exp np_doAssign empty
Rule 80    ope -> PLUS_EQ empty
Rule 81    ope -> MIN_EQ empty
Rule 82    ope -> MULT_EQ empty
Rule 83    ope -> DIV_EQ empty
Rule 84    conditional -> WHILE L_PAR exp R_PAR DO L_CURPAR statement SEMICOLON R_CURPAR empty
Rule 85    nonconditional -> FROM VAR arrfunc nonconditionalF
Rule 86    nonconditional -> FROM VAR nonconditionalF
Rule 87    nonconditionalF -> exp TO exp DO L_CURPAR statement SEMICOLON R_CURPAR empty
Rule 88    bool -> logical np_addBool boolF
Rule 89    boolF -> OR np_addOp bool
Rule 90    boolF -> AND np_addOp bool
Rule 91    boolF -> empty
Rule 92    logical -> ex np_addLogical logicalF
Rule 93    logicalF -> LESS np_addOp logical
Rule 94    logicalF -> GREATER np_addOp logical
Rule 95    logicalF -> LESS_TH np_addOp logical
Rule 96    logicalF -> GREAT_TH np_addOp logical
Rule 97    logicalF -> SAME np_addOp logical
Rule 98    logicalF -> DIF np_addOp logical
Rule 99    logicalF -> empty
Rule 100   exp -> bool empty
Rule 101   ex -> term np_addEx exF
Rule 102   exF -> PLUS np_addOp ex
Rule 103   exF -> MINUS np_addOp ex
Rule 104   exF -> empty
Rule 105   term -> factor np_addTerm termF
Rule 106   termF -> MULT np_addOp term
Rule 107   termF -> DIV np_addOp term
Rule 108   termF -> empty
Rule 109   factor -> L_PAR np_addPar exp R_PAR np_popPar empty
Rule 110   factor -> factorT
Rule 111   factorT -> PLUS factorF
Rule 112   factorT -> MINUS factorF
Rule 113   factorT -> factorF
Rule 114   factorF -> varcte empty
Rule 115   varcte -> var np_addId empty
Rule 116   varcte -> CTE_INT np_addConstInt empty
Rule 117   varcte -> CTE_FLOAT np_addConstFloat empty
Rule 118   varcte -> CTE_CHAR np_addConstChar empty
Rule 119   varcte -> CTE_BOOL np_addConstBool empty
Rule 120   empty -> <empty>
Rule 121   np_getMainFunc -> <empty>
Rule 122   np_addFunc -> <empty>
Rule 123   np_getDec -> <empty>
Rule 124   np_getDecArr -> <empty>
Rule 125   np_getVarType -> <empty>
Rule 126   np_addToDic -> <empty>
Rule 127   np_addId -> <empty>
Rule 128   np_addConstInt -> <empty>
Rule 129   np_addConstFloat -> <empty>
Rule 130   np_addConstChar -> <empty>
Rule 131   np_addConstBool -> <empty>
Rule 132   np_addConstString -> <empty>
Rule 133   np_addOp -> <empty>
Rule 134   np_addPar -> <empty>
Rule 135   np_popPar -> <empty>
Rule 136   np_addTerm -> <empty>
Rule 137   np_addEx -> <empty>
Rule 138   np_addLogical -> <empty>
Rule 139   np_addBool -> <empty>
Rule 140   np_doAssign -> <empty>
Rule 141   np_addRead -> <empty>
Rule 142   np_addWrite -> <empty>
Rule 143   np_addReturn -> <empty>
Rule 144   np_checkBool -> <empty>
Rule 145   np_endIf -> <empty>
Rule 146   np_else -> <empty>

Terminals, with rules where they appear

AND                  : 90
ATTRIBUTES           : 10
BOOL                 : 20 30 39
CHAR                 : 19 29 38
CLASS                : 7
COLON                : 15 16 33
COMMA                : 14 22 54 57 65 70
CTE_BOOL             : 119
CTE_CHAR             : 118
CTE_FLOAT            : 117
CTE_INT              : 22 22 23 116
CTE_STRING           : 68
DIF                  : 98
DIV                  : 107
DIV_EQ               : 83
DO                   : 84 87
DOT                  : 51 61
ELSE                 : 75
EQUAL                : 78
FLOAT                : 18 28 37
FROM                 : 85 86
FUNCTION             : 24
GREATER              : 8 94
GREAT_TH             : 96
ID                   : 1 7 8 21 24 31 40 51 51 52 53 61
IF                   : 74
INHERIT              : 8
INT                  : 17 27 36
LESS                 : 8 93
LESS_TH              : 95
L_BREAK              : 22 23 54 55
L_CURPAR             : 10 25 26 41 74 75 84 87
L_PAR                : 24 41 51 52 53 59 64 67 74 84 109
MAIN                 : 41
METHODS              : 10
MINUS                : 103 112
MIN_EQ               : 81
MULT                 : 106
MULT_EQ              : 82
OR                   : 89
PLUS                 : 102 111
PLUS_EQ              : 80
PROGRAM              : 1
READ                 : 64
RETURN               : 59
R_BREAK              : 22 23 54 55
R_CURPAR             : 10 25 26 41 74 75 84 87
R_PAR                : 25 26 41 51 52 53 59 66 71 74 84 109
SAME                 : 97
SEMICOLON            : 1 10 10 15 16 25 26 33 51 52 53 59 66 71 74 75 84 87
THEN                 : 74
TO                   : 87
VAR                  : 12 13 33 60 61 85 86
VARS                 : 11
VOID                 : 32
WHILE                : 84
WRITE                : 67
error                : 

Nonterminals, with rules where they appear

arr                  : 12
arrfunc              : 62 85
assigment            : 42
assigmentF           : 77
bool                 : 89 90 100
boolF                : 88
class                : 2
classF               : 8 9
classT               : 7
conditional          : 72
dec                  : 10 11 14 15 25 26
decF                 : 12 13
empty                : 6 10 11 16 17 18 19 20 21 22 23 25 26 27 28 29 30 31 32 35 36 37 38 39 40 41 50 51 52 53 54 55 58 59 62 63 66 71 72 73 75 76 78 79 80 81 82 83 84 87 91 99 100 104 108 109 114 115 116 117 118 119
ex                   : 92 102 103
exF                  : 101
exp                  : 54 54 55 56 59 69 74 78 79 84 87 87 109
factor               : 105
factorF              : 111 112 113
factorT              : 110
func                 : 5 10
funcF                : 24
if                   : 47
ifF                  : 74
logical              : 88 93 94 95 96 97 98
logicalF             : 92
main                 : 6
nonconditional       : 73
nonconditionalF      : 85 86
np_addBool           : 88
np_addConstBool      : 119
np_addConstChar      : 118
np_addConstFloat     : 117
np_addConstInt       : 116
np_addConstString    : 68
np_addEx             : 101
np_addFunc           : 1 24
np_addId             : 77 115
np_addLogical        : 92
np_addOp             : 78 79 89 90 93 94 95 96 97 98 102 103 106 107
np_addPar            : 109
np_addRead           : 65 66
np_addReturn         : 59
np_addTerm           : 105
np_addToDic          : 16
np_addWrite          : 70 71
np_checkBool         : 74
np_doAssign          : 78 79
np_else              : 75
np_endIf             : 75 76
np_getDec            : 13 15 16
np_getDecArr         : 12
np_getMainFunc       : 41
np_getVarType        : 15 16
np_popPar            : 109
ope                  : 79
param                : 51 52 57
paramF               : 56
parameter            : 25 34
parameterF           : 33
program              : 0
programF             : 3 4 5
programT             : 1 2
read                 : 45
readF                : 64 65
repeat               : 48
return               : 44
statement            : 25 26 41 49 74 75 84 87
statementF           : 42 43 44 45 46 47 48
term                 : 101 106 107
termF                : 105
type                 : 15 16
typeFunc             : 24
typepar              : 33
var                  : 65 66 77 115
varF                 : 60 61
varcte               : 114
vars                 : 3
void                 : 43
write                : 46
writeF               : 68 69
writeT               : 67 70

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID np_addFunc SEMICOLON programT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID np_addFunc SEMICOLON programT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . np_addFunc SEMICOLON programT
    (122) np_addFunc -> .

    SEMICOLON       reduce using rule 122 (np_addFunc -> .)

    np_addFunc                     shift and go to state 4

state 4

    (1) program -> PROGRAM ID np_addFunc . SEMICOLON programT

    SEMICOLON       shift and go to state 5


state 5

    (1) program -> PROGRAM ID np_addFunc SEMICOLON . programT
    (2) programT -> . class programT
    (3) programT -> . vars programF
    (4) programT -> . programF
    (7) class -> . CLASS ID classT
    (11) vars -> . VARS dec empty
    (5) programF -> . func programF
    (6) programF -> . main empty
    (24) func -> . typeFunc FUNCTION ID np_addFunc L_PAR funcF
    (41) main -> . MAIN np_getMainFunc L_PAR R_PAR L_CURPAR statement R_CURPAR empty
    (27) typeFunc -> . INT empty
    (28) typeFunc -> . FLOAT empty
    (29) typeFunc -> . CHAR empty
    (30) typeFunc -> . BOOL empty
    (31) typeFunc -> . ID empty
    (32) typeFunc -> . VOID empty

    CLASS           shift and go to state 11
    VARS            shift and go to state 12
    MAIN            shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    CHAR            shift and go to state 19
    BOOL            shift and go to state 20
    ID              shift and go to state 6
    VOID            shift and go to state 21

    programT                       shift and go to state 7
    class                          shift and go to state 8
    vars                           shift and go to state 9
    programF                       shift and go to state 10
    func                           shift and go to state 13
    main                           shift and go to state 14
    typeFunc                       shift and go to state 15

state 6

    (31) typeFunc -> ID . empty
    (120) empty -> .

    FUNCTION        reduce using rule 120 (empty -> .)

    empty                          shift and go to state 22

state 7

    (1) program -> PROGRAM ID np_addFunc SEMICOLON programT .

    $end            reduce using rule 1 (program -> PROGRAM ID np_addFunc SEMICOLON programT .)


state 8

    (2) programT -> class . programT
    (2) programT -> . class programT
    (3) programT -> . vars programF
    (4) programT -> . programF
    (7) class -> . CLASS ID classT
    (11) vars -> . VARS dec empty
    (5) programF -> . func programF
    (6) programF -> . main empty
    (24) func -> . typeFunc FUNCTION ID np_addFunc L_PAR funcF
    (41) main -> . MAIN np_getMainFunc L_PAR R_PAR L_CURPAR statement R_CURPAR empty
    (27) typeFunc -> . INT empty
    (28) typeFunc -> . FLOAT empty
    (29) typeFunc -> . CHAR empty
    (30) typeFunc -> . BOOL empty
    (31) typeFunc -> . ID empty
    (32) typeFunc -> . VOID empty

    CLASS           shift and go to state 11
    VARS            shift and go to state 12
    MAIN            shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    CHAR            shift and go to state 19
    BOOL            shift and go to state 20
    ID              shift and go to state 6
    VOID            shift and go to state 21

    class                          shift and go to state 8
    programT                       shift and go to state 23
    vars                           shift and go to state 9
    programF                       shift and go to state 10
    func                           shift and go to state 13
    main                           shift and go to state 14
    typeFunc                       shift and go to state 15

state 9

    (3) programT -> vars . programF
    (5) programF -> . func programF
    (6) programF -> . main empty
    (24) func -> . typeFunc FUNCTION ID np_addFunc L_PAR funcF
    (41) main -> . MAIN np_getMainFunc L_PAR R_PAR L_CURPAR statement R_CURPAR empty
    (27) typeFunc -> . INT empty
    (28) typeFunc -> . FLOAT empty
    (29) typeFunc -> . CHAR empty
    (30) typeFunc -> . BOOL empty
    (31) typeFunc -> . ID empty
    (32) typeFunc -> . VOID empty

    MAIN            shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    CHAR            shift and go to state 19
    BOOL            shift and go to state 20
    ID              shift and go to state 6
    VOID            shift and go to state 21

    programF                       shift and go to state 24
    func                           shift and go to state 13
    main                           shift and go to state 14
    typeFunc                       shift and go to state 15

state 10

    (4) programT -> programF .

    $end            reduce using rule 4 (programT -> programF .)


state 11

    (7) class -> CLASS . ID classT

    ID              shift and go to state 25


state 12

    (11) vars -> VARS . dec empty
    (12) dec -> . VAR arr np_getDecArr decF
    (13) dec -> . VAR np_getDec decF

    VAR             shift and go to state 27

    dec                            shift and go to state 26

state 13

    (5) programF -> func . programF
    (5) programF -> . func programF
    (6) programF -> . main empty
    (24) func -> . typeFunc FUNCTION ID np_addFunc L_PAR funcF
    (41) main -> . MAIN np_getMainFunc L_PAR R_PAR L_CURPAR statement R_CURPAR empty
    (27) typeFunc -> . INT empty
    (28) typeFunc -> . FLOAT empty
    (29) typeFunc -> . CHAR empty
    (30) typeFunc -> . BOOL empty
    (31) typeFunc -> . ID empty
    (32) typeFunc -> . VOID empty

    MAIN            shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    CHAR            shift and go to state 19
    BOOL            shift and go to state 20
    ID              shift and go to state 6
    VOID            shift and go to state 21

    func                           shift and go to state 13
    programF                       shift and go to state 28
    main                           shift and go to state 14
    typeFunc                       shift and go to state 15

state 14

    (6) programF -> main . empty
    (120) empty -> .

    $end            reduce using rule 120 (empty -> .)

    empty                          shift and go to state 29

state 15

    (24) func -> typeFunc . FUNCTION ID np_addFunc L_PAR funcF

    FUNCTION        shift and go to state 30


state 16

    (41) main -> MAIN . np_getMainFunc L_PAR R_PAR L_CURPAR statement R_CURPAR empty
    (121) np_getMainFunc -> .

    L_PAR           reduce using rule 121 (np_getMainFunc -> .)

    np_getMainFunc                 shift and go to state 31

state 17

    (27) typeFunc -> INT . empty
    (120) empty -> .

    FUNCTION        reduce using rule 120 (empty -> .)

    empty                          shift and go to state 32

state 18

    (28) typeFunc -> FLOAT . empty
    (120) empty -> .

    FUNCTION        reduce using rule 120 (empty -> .)

    empty                          shift and go to state 33

state 19

    (29) typeFunc -> CHAR . empty
    (120) empty -> .

    FUNCTION        reduce using rule 120 (empty -> .)

    empty                          shift and go to state 34

state 20

    (30) typeFunc -> BOOL . empty
    (120) empty -> .

    FUNCTION        reduce using rule 120 (empty -> .)

    empty                          shift and go to state 35

state 21

    (32) typeFunc -> VOID . empty
    (120) empty -> .

    FUNCTION        reduce using rule 120 (empty -> .)

    empty                          shift and go to state 36

state 22

    (31) typeFunc -> ID empty .

    FUNCTION        reduce using rule 31 (typeFunc -> ID empty .)


state 23

    (2) programT -> class programT .

    $end            reduce using rule 2 (programT -> class programT .)


state 24

    (3) programT -> vars programF .

    $end            reduce using rule 3 (programT -> vars programF .)


state 25

    (7) class -> CLASS ID . classT
    (8) classT -> . LESS INHERIT ID GREATER classF
    (9) classT -> . classF
    (10) classF -> . SEMICOLON L_CURPAR ATTRIBUTES dec METHODS func R_CURPAR SEMICOLON empty

    LESS            shift and go to state 38
    SEMICOLON       shift and go to state 40

    classT                         shift and go to state 37
    classF                         shift and go to state 39

state 26

    (11) vars -> VARS dec . empty
    (120) empty -> .

    MAIN            reduce using rule 120 (empty -> .)
    INT             reduce using rule 120 (empty -> .)
    FLOAT           reduce using rule 120 (empty -> .)
    CHAR            reduce using rule 120 (empty -> .)
    BOOL            reduce using rule 120 (empty -> .)
    ID              reduce using rule 120 (empty -> .)
    VOID            reduce using rule 120 (empty -> .)

    empty                          shift and go to state 41

state 27

    (12) dec -> VAR . arr np_getDecArr decF
    (13) dec -> VAR . np_getDec decF
    (22) arr -> . L_BREAK CTE_INT COMMA CTE_INT R_BREAK empty
    (23) arr -> . L_BREAK CTE_INT R_BREAK empty
    (123) np_getDec -> .

    L_BREAK         shift and go to state 44
    COMMA           reduce using rule 123 (np_getDec -> .)
    COLON           reduce using rule 123 (np_getDec -> .)

    arr                            shift and go to state 42
    np_getDec                      shift and go to state 43

state 28

    (5) programF -> func programF .

    $end            reduce using rule 5 (programF -> func programF .)


state 29

    (6) programF -> main empty .

    $end            reduce using rule 6 (programF -> main empty .)


state 30

    (24) func -> typeFunc FUNCTION . ID np_addFunc L_PAR funcF

    ID              shift and go to state 45


state 31

    (41) main -> MAIN np_getMainFunc . L_PAR R_PAR L_CURPAR statement R_CURPAR empty

    L_PAR           shift and go to state 46


state 32

    (27) typeFunc -> INT empty .

    FUNCTION        reduce using rule 27 (typeFunc -> INT empty .)


state 33

    (28) typeFunc -> FLOAT empty .

    FUNCTION        reduce using rule 28 (typeFunc -> FLOAT empty .)


state 34

    (29) typeFunc -> CHAR empty .

    FUNCTION        reduce using rule 29 (typeFunc -> CHAR empty .)


state 35

    (30) typeFunc -> BOOL empty .

    FUNCTION        reduce using rule 30 (typeFunc -> BOOL empty .)


state 36

    (32) typeFunc -> VOID empty .

    FUNCTION        reduce using rule 32 (typeFunc -> VOID empty .)


state 37

    (7) class -> CLASS ID classT .

    CLASS           reduce using rule 7 (class -> CLASS ID classT .)
    VARS            reduce using rule 7 (class -> CLASS ID classT .)
    MAIN            reduce using rule 7 (class -> CLASS ID classT .)
    INT             reduce using rule 7 (class -> CLASS ID classT .)
    FLOAT           reduce using rule 7 (class -> CLASS ID classT .)
    CHAR            reduce using rule 7 (class -> CLASS ID classT .)
    BOOL            reduce using rule 7 (class -> CLASS ID classT .)
    ID              reduce using rule 7 (class -> CLASS ID classT .)
    VOID            reduce using rule 7 (class -> CLASS ID classT .)


state 38

    (8) classT -> LESS . INHERIT ID GREATER classF

    INHERIT         shift and go to state 47


state 39

    (9) classT -> classF .

    CLASS           reduce using rule 9 (classT -> classF .)
    VARS            reduce using rule 9 (classT -> classF .)
    MAIN            reduce using rule 9 (classT -> classF .)
    INT             reduce using rule 9 (classT -> classF .)
    FLOAT           reduce using rule 9 (classT -> classF .)
    CHAR            reduce using rule 9 (classT -> classF .)
    BOOL            reduce using rule 9 (classT -> classF .)
    ID              reduce using rule 9 (classT -> classF .)
    VOID            reduce using rule 9 (classT -> classF .)


state 40

    (10) classF -> SEMICOLON . L_CURPAR ATTRIBUTES dec METHODS func R_CURPAR SEMICOLON empty

    L_CURPAR        shift and go to state 48


state 41

    (11) vars -> VARS dec empty .

    MAIN            reduce using rule 11 (vars -> VARS dec empty .)
    INT             reduce using rule 11 (vars -> VARS dec empty .)
    FLOAT           reduce using rule 11 (vars -> VARS dec empty .)
    CHAR            reduce using rule 11 (vars -> VARS dec empty .)
    BOOL            reduce using rule 11 (vars -> VARS dec empty .)
    ID              reduce using rule 11 (vars -> VARS dec empty .)
    VOID            reduce using rule 11 (vars -> VARS dec empty .)


state 42

    (12) dec -> VAR arr . np_getDecArr decF
    (124) np_getDecArr -> .

    COMMA           reduce using rule 124 (np_getDecArr -> .)
    COLON           reduce using rule 124 (np_getDecArr -> .)

    np_getDecArr                   shift and go to state 49

state 43

    (13) dec -> VAR np_getDec . decF
    (14) decF -> . COMMA dec
    (15) decF -> . COLON type np_getVarType SEMICOLON np_getDec dec
    (16) decF -> . COLON type np_getVarType SEMICOLON np_getDec np_addToDic empty

    COMMA           shift and go to state 51
    COLON           shift and go to state 52

    decF                           shift and go to state 50

state 44

    (22) arr -> L_BREAK . CTE_INT COMMA CTE_INT R_BREAK empty
    (23) arr -> L_BREAK . CTE_INT R_BREAK empty

    CTE_INT         shift and go to state 53


state 45

    (24) func -> typeFunc FUNCTION ID . np_addFunc L_PAR funcF
    (122) np_addFunc -> .

    L_PAR           reduce using rule 122 (np_addFunc -> .)

    np_addFunc                     shift and go to state 54

state 46

    (41) main -> MAIN np_getMainFunc L_PAR . R_PAR L_CURPAR statement R_CURPAR empty

    R_PAR           shift and go to state 55


state 47

    (8) classT -> LESS INHERIT . ID GREATER classF

    ID              shift and go to state 56


state 48

    (10) classF -> SEMICOLON L_CURPAR . ATTRIBUTES dec METHODS func R_CURPAR SEMICOLON empty

    ATTRIBUTES      shift and go to state 57


state 49

    (12) dec -> VAR arr np_getDecArr . decF
    (14) decF -> . COMMA dec
    (15) decF -> . COLON type np_getVarType SEMICOLON np_getDec dec
    (16) decF -> . COLON type np_getVarType SEMICOLON np_getDec np_addToDic empty

    COMMA           shift and go to state 51
    COLON           shift and go to state 52

    decF                           shift and go to state 58

state 50

    (13) dec -> VAR np_getDec decF .

    MAIN            reduce using rule 13 (dec -> VAR np_getDec decF .)
    INT             reduce using rule 13 (dec -> VAR np_getDec decF .)
    FLOAT           reduce using rule 13 (dec -> VAR np_getDec decF .)
    CHAR            reduce using rule 13 (dec -> VAR np_getDec decF .)
    BOOL            reduce using rule 13 (dec -> VAR np_getDec decF .)
    ID              reduce using rule 13 (dec -> VAR np_getDec decF .)
    VOID            reduce using rule 13 (dec -> VAR np_getDec decF .)
    METHODS         reduce using rule 13 (dec -> VAR np_getDec decF .)
    L_CURPAR        reduce using rule 13 (dec -> VAR np_getDec decF .)


state 51

    (14) decF -> COMMA . dec
    (12) dec -> . VAR arr np_getDecArr decF
    (13) dec -> . VAR np_getDec decF

    VAR             shift and go to state 27

    dec                            shift and go to state 59

state 52

    (15) decF -> COLON . type np_getVarType SEMICOLON np_getDec dec
    (16) decF -> COLON . type np_getVarType SEMICOLON np_getDec np_addToDic empty
    (17) type -> . INT empty
    (18) type -> . FLOAT empty
    (19) type -> . CHAR empty
    (20) type -> . BOOL empty
    (21) type -> . ID empty

    INT             shift and go to state 61
    FLOAT           shift and go to state 62
    CHAR            shift and go to state 63
    BOOL            shift and go to state 64
    ID              shift and go to state 65

    type                           shift and go to state 60

state 53

    (22) arr -> L_BREAK CTE_INT . COMMA CTE_INT R_BREAK empty
    (23) arr -> L_BREAK CTE_INT . R_BREAK empty

    COMMA           shift and go to state 66
    R_BREAK         shift and go to state 67


state 54

    (24) func -> typeFunc FUNCTION ID np_addFunc . L_PAR funcF

    L_PAR           shift and go to state 68


state 55

    (41) main -> MAIN np_getMainFunc L_PAR R_PAR . L_CURPAR statement R_CURPAR empty

    L_CURPAR        shift and go to state 69


state 56

    (8) classT -> LESS INHERIT ID . GREATER classF

    GREATER         shift and go to state 70


state 57

    (10) classF -> SEMICOLON L_CURPAR ATTRIBUTES . dec METHODS func R_CURPAR SEMICOLON empty
    (12) dec -> . VAR arr np_getDecArr decF
    (13) dec -> . VAR np_getDec decF

    VAR             shift and go to state 27

    dec                            shift and go to state 71

state 58

    (12) dec -> VAR arr np_getDecArr decF .

    MAIN            reduce using rule 12 (dec -> VAR arr np_getDecArr decF .)
    INT             reduce using rule 12 (dec -> VAR arr np_getDecArr decF .)
    FLOAT           reduce using rule 12 (dec -> VAR arr np_getDecArr decF .)
    CHAR            reduce using rule 12 (dec -> VAR arr np_getDecArr decF .)
    BOOL            reduce using rule 12 (dec -> VAR arr np_getDecArr decF .)
    ID              reduce using rule 12 (dec -> VAR arr np_getDecArr decF .)
    VOID            reduce using rule 12 (dec -> VAR arr np_getDecArr decF .)
    METHODS         reduce using rule 12 (dec -> VAR arr np_getDecArr decF .)
    L_CURPAR        reduce using rule 12 (dec -> VAR arr np_getDecArr decF .)


state 59

    (14) decF -> COMMA dec .

    MAIN            reduce using rule 14 (decF -> COMMA dec .)
    INT             reduce using rule 14 (decF -> COMMA dec .)
    FLOAT           reduce using rule 14 (decF -> COMMA dec .)
    CHAR            reduce using rule 14 (decF -> COMMA dec .)
    BOOL            reduce using rule 14 (decF -> COMMA dec .)
    ID              reduce using rule 14 (decF -> COMMA dec .)
    VOID            reduce using rule 14 (decF -> COMMA dec .)
    METHODS         reduce using rule 14 (decF -> COMMA dec .)
    L_CURPAR        reduce using rule 14 (decF -> COMMA dec .)


state 60

    (15) decF -> COLON type . np_getVarType SEMICOLON np_getDec dec
    (16) decF -> COLON type . np_getVarType SEMICOLON np_getDec np_addToDic empty
    (125) np_getVarType -> .

    SEMICOLON       reduce using rule 125 (np_getVarType -> .)

    np_getVarType                  shift and go to state 72

state 61

    (17) type -> INT . empty
    (120) empty -> .

    SEMICOLON       reduce using rule 120 (empty -> .)

    empty                          shift and go to state 73

state 62

    (18) type -> FLOAT . empty
    (120) empty -> .

    SEMICOLON       reduce using rule 120 (empty -> .)

    empty                          shift and go to state 74

state 63

    (19) type -> CHAR . empty
    (120) empty -> .

    SEMICOLON       reduce using rule 120 (empty -> .)

    empty                          shift and go to state 75

state 64

    (20) type -> BOOL . empty
    (120) empty -> .

    SEMICOLON       reduce using rule 120 (empty -> .)

    empty                          shift and go to state 76

state 65

    (21) type -> ID . empty
    (120) empty -> .

    SEMICOLON       reduce using rule 120 (empty -> .)

    empty                          shift and go to state 77

state 66

    (22) arr -> L_BREAK CTE_INT COMMA . CTE_INT R_BREAK empty

    CTE_INT         shift and go to state 78


state 67

    (23) arr -> L_BREAK CTE_INT R_BREAK . empty
    (120) empty -> .

    COMMA           reduce using rule 120 (empty -> .)
    COLON           reduce using rule 120 (empty -> .)

    empty                          shift and go to state 79

state 68

    (24) func -> typeFunc FUNCTION ID np_addFunc L_PAR . funcF
    (25) funcF -> . parameter R_PAR SEMICOLON dec L_CURPAR statement R_CURPAR empty
    (26) funcF -> . R_PAR SEMICOLON dec L_CURPAR statement R_CURPAR empty
    (33) parameter -> . VAR COLON typepar SEMICOLON parameterF

    R_PAR           shift and go to state 82
    VAR             shift and go to state 83

    funcF                          shift and go to state 80
    parameter                      shift and go to state 81

state 69

    (41) main -> MAIN np_getMainFunc L_PAR R_PAR L_CURPAR . statement R_CURPAR empty
    (42) statement -> . assigment statementF
    (43) statement -> . void statementF
    (44) statement -> . return statementF
    (45) statement -> . read statementF
    (46) statement -> . write statementF
    (47) statement -> . if statementF
    (48) statement -> . repeat statementF
    (77) assigment -> . var np_addId assigmentF
    (51) void -> . ID DOT ID L_PAR param R_PAR SEMICOLON empty
    (52) void -> . ID L_PAR param R_PAR SEMICOLON empty
    (53) void -> . ID L_PAR R_PAR SEMICOLON empty
    (59) return -> . RETURN L_PAR exp np_addReturn R_PAR SEMICOLON empty
    (64) read -> . READ L_PAR readF
    (67) write -> . WRITE L_PAR writeT
    (74) if -> . IF L_PAR exp np_checkBool R_PAR THEN L_CURPAR statement SEMICOLON R_CURPAR ifF
    (72) repeat -> . conditional empty
    (73) repeat -> . nonconditional empty
    (60) var -> . VAR varF
    (61) var -> . ID DOT VAR varF
    (84) conditional -> . WHILE L_PAR exp R_PAR DO L_CURPAR statement SEMICOLON R_CURPAR empty
    (85) nonconditional -> . FROM VAR arrfunc nonconditionalF
    (86) nonconditional -> . FROM VAR nonconditionalF

    ID              shift and go to state 93
    RETURN          shift and go to state 94
    READ            shift and go to state 95
    WRITE           shift and go to state 96
    IF              shift and go to state 97
    VAR             shift and go to state 100
    WHILE           shift and go to state 101
    FROM            shift and go to state 102

    statement                      shift and go to state 84
    assigment                      shift and go to state 85
    void                           shift and go to state 86
    return                         shift and go to state 87
    read                           shift and go to state 88
    write                          shift and go to state 89
    if                             shift and go to state 90
    repeat                         shift and go to state 91
    var                            shift and go to state 92
    conditional                    shift and go to state 98
    nonconditional                 shift and go to state 99

state 70

    (8) classT -> LESS INHERIT ID GREATER . classF
    (10) classF -> . SEMICOLON L_CURPAR ATTRIBUTES dec METHODS func R_CURPAR SEMICOLON empty
